Haiku/bridge/libmojobe/mojobe.h

/*!	A Mojo type's hooks for a `BApplication`: a NULL slot is a hook the type
	does not implement. The type tag names the Mojo type. */
struct mojobe_BApplication_hooks {
	uint64	type;
	void	(*destroy)(void* context);
	void	(*ReadyToRun)(void* context, BApplication* self);
	void	(*MessageReceived)(void* context,
			BApplication* self,
			BMessage* message);
	bool	(*QuitRequested)(void* context, BApplication* self);
	void	(*AboutRequested)(void* context, BApplication* self);
	void	(*Pulse)(void* context, BApplication* self);
};
// status_t BLooper::LockWithTimeout(bigtime_t timeout)
status_t mojobe_BApplication_LockWithTimeout(BApplication* self,
	bigtime_t a_timeout);
// thread_id BLooper::Thread() const
int32 mojobe_BApplication_Thread(BApplication* self);
// team_id BLooper::Team() const
int32 mojobe_BApplication_Team(BApplication* self);
// thread_id BLooper::LockingThread() const
int32 mojobe_BApplication_LockingThread(BApplication* self);
// int32 BLooper::CountLocks() const
int32 mojobe_BApplication_CountLocks(BApplication* self);
// int32 BLooper::CountLockRequests() const
int32 mojobe_BApplication_CountLockRequests(BApplication* self);
// sem_id BLooper::Sem() const
int32 mojobe_BApplication_Sem(BApplication* self);
// void BHandler::SetName(const char* name)
void mojobe_BApplication_SetName(BApplication* self, const char* a_name);
// const char* BHandler::Name() const
const char* mojobe_BApplication_Name(BApplication* self);
// bool BHandler::LockLooper()
bool mojobe_BApplication_LockLooper(BApplication* self);
// status_t BHandler::LockLooperWithTimeout(bigtime_t timeout)
status_t mojobe_BApplication_LockLooperWithTimeout(BApplication* self,
	bigtime_t a_timeout);
// void BHandler::UnlockLooper()
void mojobe_BApplication_UnlockLooper(BApplication* self);
// void BHandler::SendNotices(uint32 what, const BMessage* notice)
void mojobe_BApplication_SendNotices(BApplication* self,
	uint32 a_what,
	BMessage* a_notice);
// bool BHandler::IsWatched() const
bool mojobe_BApplication_IsWatched(BApplication* self);
// status_t BArchivable::AllUnarchived(const BMessage* archive)
status_t mojobe_BApplication_AllUnarchived(BApplication* self,
	BMessage* a_archive);
// status_t BArchivable::AllArchived(BMessage* archive) const
status_t mojobe_BApplication_AllArchived(BApplication* self,
	BMessage* a_archive);
// BApplication::BApplication(const char* signature, status_t* error)
BApplication* mojobe_BApplication_new(const char* a_signature,
	status_t* a_error);
// BApplication::BApplication(const char* signature, status_t* error), as a MojoBApplication
BApplication* mojobe_MojoBApplication_new(const char* a_signature,
	status_t* a_error,
	const mojobe_BApplication_hooks* hooks,
	void* context);
// ~BApplication()
void mojobe_BApplication_delete(BApplication* self);
// BApplication's own ReadyToRun
void mojobe_BApplication_base_ReadyToRun(BApplication* self);
// BApplication's own MessageReceived
void mojobe_BApplication_base_MessageReceived(BApplication* self,
	BMessage* message);
// BApplication's own QuitRequested
bool mojobe_BApplication_base_QuitRequested(BApplication* self);
// BApplication's own AboutRequested
void mojobe_BApplication_base_AboutRequested(BApplication* self);
// BApplication's own Pulse
void mojobe_BApplication_base_Pulse(BApplication* self);
void* mojobe_MojoBApplication_context(BApplication* self, uint64 type);