Haiku/bridge/haiku/_api.mojo


    def LockWithTimeout(self, timeout: Int64) raises:
        """`status_t BLooper::LockWithTimeout(bigtime_t timeout)`."""
        var _result = external_call["mojobe_BApplication_LockWithTimeout", Int32](
            _nonnull(self._as_BApplication(), "BApplication::LockWithTimeout"),
            timeout,
        )
        _check(_result, "BLooper::LockWithTimeout")

    def Thread(self) -> Int32:
        """`thread_id BLooper::Thread() const`."""
        var _result = external_call["mojobe_BApplication_Thread", Int32](
            _nonnull(self._as_BApplication(), "BApplication::Thread"),
        )
        return _result

    def Team(self) -> Int32:
        """`team_id BLooper::Team() const`."""
        var _result = external_call["mojobe_BApplication_Team", Int32](
            _nonnull(self._as_BApplication(), "BApplication::Team"),
        )
        return _result

    def LockingThread(self) -> Int32:
        """`thread_id BLooper::LockingThread() const`."""
        var _result = external_call["mojobe_BApplication_LockingThread", Int32](
            _nonnull(self._as_BApplication(), "BApplication::LockingThread"),
        )
        return _result

    def CountLocks(self) -> Int32:
        """`int32 BLooper::CountLocks() const`."""
        var _result = external_call["mojobe_BApplication_CountLocks", Int32](
            _nonnull(self._as_BApplication(), "BApplication::CountLocks"),
        )
        return _result

    def CountLockRequests(self) -> Int32:
        """`int32 BLooper::CountLockRequests() const`."""
        var _result = external_call["mojobe_BApplication_CountLockRequests", Int32](
            _nonnull(
                self._as_BApplication(),
                "BApplication::CountLockRequests",
            ),
        )
        return _result

    def Sem(self) -> Int32:
        """`sem_id BLooper::Sem() const`."""
        var _result = external_call["mojobe_BApplication_Sem", Int32](
            _nonnull(self._as_BApplication(), "BApplication::Sem"),
        )
        return _result

    def SetName(self, var name: String):
        """`void BHandler::SetName(const char* name)`."""
        external_call["mojobe_BApplication_SetName", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::SetName"),
            name.as_c_string_span(),
        )
        _ = name^

    def Name(self) -> String:
        """`const char* BHandler::Name() const`."""
        var _result = external_call["mojobe_BApplication_Name", Int](
            _nonnull(self._as_BApplication(), "BApplication::Name"),
        )
        return _string_from(_result)

    def LockLooper(self) -> Bool:
        """`bool BHandler::LockLooper()`."""
        var _result = external_call["mojobe_BApplication_LockLooper", Bool](
            _nonnull(self._as_BApplication(), "BApplication::LockLooper"),
        )
        return _result

    def LockLooperWithTimeout(self, timeout: Int64) raises:
        """`status_t BHandler::LockLooperWithTimeout(bigtime_t timeout)`."""
        var _result = external_call["mojobe_BApplication_LockLooperWithTimeout", Int32](
            _nonnull(
                self._as_BApplication(),
                "BApplication::LockLooperWithTimeout",
            ),
            timeout,
        )
        _check(_result, "BHandler::LockLooperWithTimeout")

    def UnlockLooper(self):
        """`void BHandler::UnlockLooper()`."""
        external_call["mojobe_BApplication_UnlockLooper", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::UnlockLooper"),
        )

    def SendNotices(self, what: UInt32, notice: BMessageRef = BMessageRef()):
        """`void BHandler::SendNotices(uint32 what, const BMessage* notice)`."""
        external_call["mojobe_BApplication_SendNotices", NoneType](
            _nonnull(self._as_BApplication(), "BApplication::SendNotices"),
            what,
            _addr(notice._as_BMessage()),
        )

    def IsWatched(self) -> Bool:
        """`bool BHandler::IsWatched() const`."""
        var _result = external_call["mojobe_BApplication_IsWatched", Bool](
            _nonnull(self._as_BApplication(), "BApplication::IsWatched"),
        )
        return _result

    def AllUnarchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BArchivable::AllUnarchived(const BMessage* archive)`."""
        var _result = external_call["mojobe_BApplication_AllUnarchived", Int32](
            _nonnull(self._as_BApplication(), "BApplication::AllUnarchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BArchivable::AllUnarchived")

    def AllArchived(self, archive: Some[_AsBMessage]) raises:
        """`status_t BArchivable::AllArchived(BMessage* archive) const`."""
        var _result = external_call["mojobe_BApplication_AllArchived", Int32](
            _nonnull(self._as_BApplication(), "BApplication::AllArchived"),
            _addr(archive._as_BMessage()),
        )
        _check(_result, "BArchivable::AllArchived")


struct BApplicationRef(
    Boolable,
    ImplicitlyCopyable,
    RegisterPassable,
    _BApplicationMethods,
):
    """A `BApplication` the kit owns: valid in a hook, or while its looper is locked. It may be NULL: test it with `if`."""

    var _ptr: _NPtr

    def __init__(out self):
        """A NULL reference."""
        self._ptr = None

    def __init__(out self, ptr: _NPtr):
        self._ptr = ptr

    def __bool__(self) -> Bool:
        return Bool(self._ptr)

    def _as_BApplication(self) -> _NPtr:
        return self._ptr

    def state[T: Movable & Deinitable](
        self,
    ) raises -> ref[MutUntrackedOrigin] T:
        """The Mojo value the BApplication was made from.

        Raises:
            When it was not made from a `T`.
        """
        return _state_at[T](
            external_call["mojobe_MojoBApplication_context", Int](
                _addr(self._ptr),
                _type_tag[T](),
            ),
            "BApplication",
        )

    def base_ReadyToRun(self):
        """`BApplication::ReadyToRun`, the class's own."""
        external_call["mojobe_BApplication_base_ReadyToRun", NoneType](
            _nonnull(self._ptr, "BApplication::ReadyToRun"),
        )

    def base_MessageReceived(self, message: BMessageRef):
        """`BApplication::MessageReceived`, the class's own."""
        external_call["mojobe_BApplication_base_MessageReceived", NoneType](
            _nonnull(self._ptr, "BApplication::MessageReceived"),
            _addr(message._ptr),
        )

    def base_QuitRequested(self) -> Bool:
        """`BApplication::QuitRequested`, the class's own."""
        return external_call["mojobe_BApplication_base_QuitRequested", Bool](
            _nonnull(self._ptr, "BApplication::QuitRequested"),
        )

    def base_AboutRequested(self):
        """`BApplication::AboutRequested`, the class's own."""
        external_call["mojobe_BApplication_base_AboutRequested", NoneType](
            _nonnull(self._ptr, "BApplication::AboutRequested"),
        )

    def base_Pulse(self):
        """`BApplication::Pulse`, the class's own."""
        external_call["mojobe_BApplication_base_Pulse", NoneType](
            _nonnull(self._ptr, "BApplication::Pulse"),
        )


struct BApplication(Movable, _BApplicationMethods):
    """A `BApplication` Mojo owns, until something adopts it."""

    var _ptr: _NPtr

    def __init__(out self, var signature: String) raises:
        """`BApplication::BApplication(const char* signature, status_t* error)`."""
        _check_layouts()
        var _status = Int32(-1)
        var address = external_call["mojobe_BApplication_new", Int](
            signature.as_c_string_span(),
            Pointer(to=_status),
        )
        _ = signature^
        if address == 0:
            _check(_status, "BApplication")
            raise Error("BApplication could not be made")
        self._ptr = _ptr_from(address)

    def __init__[T: Movable & Deinitable](
        out self,
        var signature: String,
        var state: T,
    ) raises:
        """`BApplication::BApplication(const char* signature, status_t* error)`, its hooks those of `state`."""
        _check_layouts()
        var hooks = _BApplication_hooks[T]()
        var context = _to_heap(state^)
        var _status = Int32(-1)
        var address = external_call["mojobe_MojoBApplication_new", Int](
            signature.as_c_string_span(),
            Pointer(to=_status),
            Pointer(to=hooks),
            context,
        )
        _ = signature^
        if address == 0:
            _destroy[T](context)
            _check(_status, "BApplication")
            raise Error("BApplication could not be made")
        self._ptr = _ptr_from(address)

    def __deinit__(deinit self):
        external_call["mojobe_BApplication_delete", NoneType](_addr(self._ptr))

    def _adopt(deinit self) -> Int:
        """Hands the object over without deleting it."""
        return _addr(self._ptr)

    def _as_BApplication(self) -> _NPtr:
        return self._ptr


trait ApplicationReadyToRun:
    """`void BApplication::ReadyToRun()`: a hook of BApplication."""

    def ReadyToRun(mut self, application: BApplicationRef):
        ...


trait ApplicationMessageReceived:
    """`void BApplication::MessageReceived(BMessage* message)`: a hook of BApplication."""

    def MessageReceived(
        mut self,
        application: BApplicationRef,
        message: BMessageRef,
    ):
        ...


trait ApplicationQuitRequested:
    """`bool BApplication::QuitRequested()`: a hook of BApplication."""

    def QuitRequested(mut self, application: BApplicationRef) -> Bool:
        ...


trait ApplicationAboutRequested:
    """`void BApplication::AboutRequested()`: a hook of BApplication."""

    def AboutRequested(mut self, application: BApplicationRef):
        ...


trait ApplicationPulse:
    """`void BApplication::Pulse()`: a hook of BApplication."""

    def Pulse(mut self, application: BApplicationRef):
        ...


struct _BApplicationHooks(ImplicitlyCopyable, RegisterPassable):
    """`mojobe_BApplication_hooks`, laid out as C's."""

    var type: UInt64
    var destroy: _FnPtr
    var ReadyToRun: _FnPtr
    var MessageReceived: _FnPtr
    var QuitRequested: _FnPtr
    var AboutRequested: _FnPtr
    var Pulse: _FnPtr

    def __init__(out self):
        self.type = 0
        self.destroy = {}
        self.ReadyToRun = {}
        self.MessageReceived = {}
        self.QuitRequested = {}
        self.AboutRequested = {}
        self.Pulse = {}


def _BApplication_ReadyToRun[T: ApplicationReadyToRun](
    context: _Ptr,
    application: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].ReadyToRun(
        BApplicationRef(_ptr_from(application)),
    )


def _BApplication_MessageReceived[T: ApplicationMessageReceived](
    context: _Ptr,
    application: Int,
    message: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].MessageReceived(
        BApplicationRef(_ptr_from(application)),
        BMessageRef(_ptr_from(message)),
    )


def _BApplication_QuitRequested[T: ApplicationQuitRequested](
    context: _Ptr,
    application: Int,
) abi("C") -> Bool:
    return context.unsafe_bitcast[T]()[].QuitRequested(
        BApplicationRef(_ptr_from(application)),
    )


def _BApplication_AboutRequested[T: ApplicationAboutRequested](
    context: _Ptr,
    application: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].AboutRequested(
        BApplicationRef(_ptr_from(application)),
    )


def _BApplication_Pulse[T: ApplicationPulse](
    context: _Ptr,
    application: Int,
) abi("C"):
    context.unsafe_bitcast[T]()[].Pulse(BApplicationRef(_ptr_from(application)))

